ISPN-3226 Enable various reports so that CI can show them
* PMD
* CPD
* SpotBugs (replaces FindBugs)
* Dependency Check
* Enable reports for branch builds